--- a/booklist-ios/Books/BookDisplayTableCell.xib
+++ b/booklist-ios/Books/BookDisplayTableCell.xib
@@ -20,7 +20,7 @@
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MQ5-ds-2aE">
                         <rect key="frame" x="0.0" y="0.0" width="60" height="44"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nnf-jv-oX8">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="nnf-jv-oX8">
                                 <rect key="frame" x="0.0" y="0.0" width="60" height="44"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                             </stackView>
